# epidata

./: .gitignore  agegroups.ods  data.inp  data.ods  hospvscases.ods  modelo.ods  oprs.ods  vacc vs infection.ods
ModelO/: h.eps  hosp.ods  modelo.lyx  modelo.tex
ModelO/.ipynb_checkpoints/: simple-two-strain-checkpoint.ipynb
tool/: CMakeLists.txt  datasupport.cpp  districts.hpp  main.cpp  tooltools.hpp
